[project]
    dependencies = ["fastapi>=0.112.2", "pandas>=2.2.2"]
    description = "Add your description here"
    name = "uv-docker-examples"
    readme = "README.md"
    requires-python = ">=3.12"
    version = "0.1.0"

[tool.uv]
    dev-dependencies = [
    "jupyterlab>=4.2.5",
    "mypy",
    "pytest",
    "ruff>=0.6.3",
]
